Fix for the z-index stacking context propagation in IE11.

--- a/app/component/bubble-dialog.scss
+++ b/app/component/bubble-dialog.scss
@@ -3,7 +3,7 @@ $bubble-dialog-font-size--fullscreen: 1.5rem;
 
 .bubble-dialog-component-container {
   position: relative;
-  z-index: initial;
+  z-index: auto;
 
   .bubble-dialog-container {
     bottom: 2.5em;
